<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ranger2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zledwards26@gmail.com">ocecengineering</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python-numpy-quaternion-pip</exec_depend>
  <depend>mavros</depend>
  <depend>mavros_msgs</depend>
  <depend>zed_msgs</depend>
  <depend>zed_wrapper</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
